trabajando en descuentos

--- a/descuentos/descuentos.html
+++ b/descuentos/descuentos.html
@@ -17,9 +17,9 @@
                 <input id="costo" class="precio" type="number">
             </div>
             <div class="inpunt-container">
-                <label for="percent">Valor del Descuento</label>
+                <label for="percent">Cupon de Descuento</label>
                 <div class="container-percent">
-                    <input id="percent" class="descuento" type="number">
+                    <input id="percent" class="descuento" type="text">
                     <p>%</p>
                 </div>
                 
@@ -30,7 +30,7 @@
                 <p class="mostrarResultado">Aqui va el Total</p>
             </div>
             <button class="total">Total</button>
-        </div>4 
+        </div>
 
         <script src="./descuentos.js"></script>
     </body>
