--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="./descuentos/descuentos.html">Porcentajes y descuentos</a>
       </li>
       <li>
-        <a href="./platzimath.html">Estadística básica</a>
+        <a href="./estadistica-basica/platzimath.html">Estadística básica</a>
       </li>
       <li>
         <a href="./salarios.html">Análisis salarial</a>
