empezando con los salarios

--- a/salarios/salarios.html
+++ b/salarios/salarios.html
@@ -12,6 +12,7 @@
       Por favor, abre la consola del inspector de elementos
     </p>
 
-        <script src="./platzimath.js"></script>
+        <script src="../estadistica-basica/platzimath.js"></script>
+        <script src="./salarios.js"></script>
     </body>
 </html>
