--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="./estadistica-basica/platzimath.html">Estadística básica</a>
       </li>
       <li>
-        <a href="./salarios.html">Análisis salarial</a>
+        <a href="./salarios/salarios.html">Análisis salarial</a>
       </li>
     </ul>
 
