--- a/salarios/salarios.html
+++ b/salarios/salarios.html
@@ -14,5 +14,6 @@
 
         <script src="../estadistica-basica/platzimath.js"></script>
         <script src="./salarios.js"></script>
+        <script src="./analisis.js"></script>
     </body>
 </html>
